[tool.poetry]
name = "robot-simulator"
version = "0.1.0"
description = "A simple robot simulator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13.0, <3.14.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
PyGObject = "^3.46.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
